bnbexplorer-backend-45 Added swagger config for new metadata endpoint
